[package]
name = "rsclock"
version = "0.1.5.1-prerelease"
authors = ["valebes"]
edition = "2018"

description = "A simple terminal clock written in Rust."
homepage = "https://github.com/valebes/rsClock"
repository = "https://github.com/valebes/rsClock"

keywords = ["clock", "terminal", "unixporn"]
category = ["command-line-utilities"]


readme = "README.md"
license = "MIT"

[badges]

travis-ci = { repository = "valebes/rsClock", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = 'z'  # optimize size
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
termion = "1.5.6"
chrono = "0.4.19"
