[package]
name = "rsclock"
version = "0.1.8"
authors = ["valebes"]
edition = "2018"

description = "A simple terminal clock written in Rust."
homepage = "https://github.com/valebes/rsClock"
repository = "https://github.com/valebes/rsClock"

keywords = ["clock", "terminal", "unixporn"]
category = ["command-line-utilities"]


readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = 'z'  # optimize size
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
termion = "2.0.1"
chrono = "0.4.24"
